[tool.poetry]
name = "remote-cmder"
version = "0.1.0"
description = ""
authors = ["zonda yang <u226699@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "remote_cmder"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
