[tool.poetry]
name = "remote_cmder"
version = "0.1.0"
description = ""
authors = ["zonda yang <u226699@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "remote_cmder"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
pre-commit = "^3.0.4"
black = "==23.1.0"
flake8 = "==6.0.0"
isort = "==5.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
